RESOLVED FIXED195954
REGRESSION (r243094): internal media test fairplay-hls-error.html is failing
https://bugs.webkit.org/show_bug.cgi?id=195954
Summary REGRESSION (r243094): internal media test fairplay-hls-error.html is failing
Chris Dumez
Reported 2019-03-19 10:48:40 PDT
Internal media test fairplay-hls-error.html is failing since r243094.
Attachments
Patch (2.14 KB, patch)
2019-03-19 10:55 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-03-19 10:48:54 PDT
Chris Dumez
Comment 2 2019-03-19 10:55:04 PDT
Geoffrey Garen
Comment 3 2019-03-19 11:08:18 PDT
Comment on attachment 365186 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-03-19 11:44:24 PDT
Comment on attachment 365186 [details] Patch Clearing flags on attachment: 365186 Committed r243156: <https://trac.webkit.org/changeset/243156>
WebKit Commit Bot
Comment 5 2019-03-19 11:44:26 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2019-03-20 09:09:14 PDT
Grammar mistake: "because doing a load" doesn’t make sense. Because *what* is doing a load?
Chris Dumez
Comment 7 2019-03-20 09:14:51 PDT
(In reply to Darin Adler from comment #6) > Grammar mistake: "because doing a load" doesn’t make sense. Because *what* > is doing a load? I meant *before* doing a load. Will fix, thanks.
Chris Dumez
Comment 8 2019-03-20 09:17:44 PDT
(In reply to Chris Dumez from comment #7) > (In reply to Darin Adler from comment #6) > > Grammar mistake: "because doing a load" doesn’t make sense. Because *what* > > is doing a load? > > I meant *before* doing a load. Will fix, thanks. Fixed in <https://trac.webkit.org/changeset/243205>.
Note You need to log in before you can comment on or make changes to this bug.